Added links to bug reports.
2004-07-02  Christian Rose  <menthos@menthos.com>

	* sv.po: Added links to bug reports.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-02  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Added links to bug reports.
+
 2004-07-01  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Translation updated.
