--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-06  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-07-05  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali Translation
