--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-07  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-ditem-page.c:
+	Fix up some issues that made this not work.
+
 2004-07-02  Bastien Nocera  <hadess@hadess.net>
 
 	* src/file-manager/fm-directory-view.c:
