--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-07-07  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-directory-view.c:
+	(connect_to_server_response_callback), (entry_activate_callback),
+	(connect_to_server_link_callback), (real_merge_menus),
+	(real_update_menus_volumes):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Allow right-click connect to server on server links.
+
+2004-07-07  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-ditem-page.c:
 	Fix up some issues that made this not work.
 
