Better warnings on folder merge overwrite.
2004-07-07  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c (handle_transfer_overwrite):
	Better warnings on folder merge overwrite.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-07  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-operations.c (handle_transfer_overwrite):
+	Better warnings on folder merge overwrite.
+
+2004-07-07  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c:
 	(connect_to_server_response_callback), (entry_activate_callback),
 	(connect_to_server_link_callback), (real_merge_menus),
