--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-07  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-07-07  Laszlo Dvornik  <ldvornik@cvs.gnome.org>
 
 	* hu.po: Updated Hungarian translation.
