amanlinux@netscape.net update 12 July 2004

--- a/po/pa.po
+++ b/po/pa.po
@@ -2639,7 +2639,7 @@ msgstr "%u ੲਿਕਾੲੀ"
 #: libnautilus-private/nautilus-file.c:4300
 #, c-format
 msgid "%u folder"
-msgstr "%u ਫੋਲਡਰ\"
+msgstr "%u ਫੋਲਡਰ"
 
 #: libnautilus-private/nautilus-file.c:4301
 #, c-format
