Updated Swedish translation.
2004-07-14  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-14  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2004-07-14  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by
