--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-09  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (activate_check_mime_types):
+	Check for more NULL cases.
+
 2004-07-07  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c (handle_transfer_overwrite):
