--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-07-16  Alexander Larsson  <alexl@redhat.com>
+
+	* data/Makefile.am:
+	* data/preferences.desktop.in:
+	* data/serverconfig.desktop.in:
+	* data/serverconfig.directory.in:
+	* data/starthere-link.desktop.in:
+	* data/starthere.desktop.in:
+	* data/starthere.directory.in:
+	* data/sysconfig.desktop.in:
+	* data/sysconfig.directory.in:
+	* src/nautilus-application.c: (nautilus_application_startup),
+	(desktop_changed_callback):
+	* src/nautilus-window-menus.c:
+	(nautilus_window_initialize_menus_part_1):
+
+	Kill start-here.
+
 2004-07-15  Jürg Billeter  <j@bitron.ch>
  
  	* libnautilus-private/apps_nautilus_preferences.schemas.in:
