--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-18  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in: Updated (#147787, thanks to Alex Winston).
+	* de.po: Updated German translation.
+
 2004-07-16  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
