--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-19  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-07-18  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.in: Updated (#147787, thanks to Alex Winston).
