Updated eel requirement 2.7.2
2004-07-22  Dave Camp  <dave@novell.com>

	* configure.in: Updated eel requirement
	* NEWS: 2.7.2

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
-This is nautilus 2.7.1, the file manager for the Gnome 2 desktop.
+This is nautilus 2.7.2, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.7.1 are:
+
+* Added spatial/browser pref to the prefs dialog
+* Use ctrl+q to add all windows
+* On shift-double-click on a non-folder, close the window after.
+* Bug fixes
+* Show estimated time remaining in the progress dialog.
+* per-window show hidden files setting
+* Don't warn about mime-type mismatches if the handler is the same 
+  for both mime-types.
+* Date formatting improvements
+* Killed start-here
+* Changed to use the new mime spec and UI
 
 Major changes since 2.6.2 are:
 * Desktop file editior property page
