--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-22  Dave Camp  <dave@novell.com>
+
+	* configure.in: Updated eel requirement
+	* NEWS: 2.7.2
+
 2004-07-21  Dave Camp  <dave@novell.com>
 
 	* Merged the nautilus-new-mime branch.
