--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.7.2 ===
+
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * hi.po: Updated Hindi translation.
