--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-22  Dave Camp  <dave@novell.com>
+
+	* configure.in: Post-release verson bump
+
 === nautilus 2.7.2 ===
 
 2004-07-22  Dave Camp  <dave@novell.com>
