2004-07-23 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-23  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 === nautilus 2.7.2 ===
 
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
