Make strings in main() more easily translatable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  Dafydd Harries  <daf@muse.19inch.net>
+
+	* src/nautilus-main.c: Apply patch submitted for #117572 to make
+	  strings slightly easier to translate.
+
 2004-07-22  Dave Camp  <dave@novell.com>
 
 	* configure.in: Post-release verson bump
