Updated German translation, improve OtherApplication command label.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-24  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-directory-view.c:
+	* src/file-manager/nautilus-directory-view-ui.xml: Use different label
+	for OtherApplication command, depending on whether we show the
+	submenu.
+
 2004-07-23  Dafydd Harries  <daf@muse.19inch.net>
 
 	* src/nautilus-main.c: Apply patch submitted for #117572 to make
