--- a/po/tr.po
+++ b/po/tr.po
@@ -6921,7 +6921,7 @@ msgstr "_Yan Panel"
 #: src/nautilus-navigation-window-ui.xml.h:38
 #: src/nautilus-spatial-window-ui.xml.h:17
 msgid "_Templates"
-msgstr "_Şablomlar"
+msgstr "_Şablonlar"
 
 # data/linksets/desktop.xml.h:2 libnautilus-private/nautilus-file.c:4642
 # libnautilus-private/nautilus-trash-directory.c:301
