--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2004-07-28  Gil Osher  <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
