--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  David Lodge  <dave@cirt.net>
+
+	* en_GB.po: Updated British translation.
+
 2004-07-29  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
