--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian translation.
+
 2004-07-29  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
