change the name "CD Creator" to "CD/DVD Creator" following changes in
2004-07-29  Bastien Nocera  <hadess@hadess.net>

	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_get_vfs_method_display_name):
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-spatial-window-ui.xml: change the name "CD Creator" to
	"CD/DVD Creator" following changes in nautilus-cd-burner

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-29  Bastien Nocera  <hadess@hadess.net>
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_get_vfs_method_display_name):
+	* src/nautilus-navigation-window-ui.xml:
+	* src/nautilus-shell-ui.xml:
+	* src/nautilus-spatial-window-ui.xml: change the name "CD Creator" to
+	"CD/DVD Creator" following changes in nautilus-cd-burner
+
 2004-07-24  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
