Updated Czech translation.
2004-07-30  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-07-25 04:54+0200\n"
-"PO-Revision-Date: 2004-07-25 15:07+0200\n"
+"POT-Creation-Date: 2004-07-30 12:14+0200\n"
+"PO-Revision-Date: 2004-07-30 16:47+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2822,8 +2822,8 @@ msgid "Themes"
 msgstr "Témata"
 
 #: libnautilus-private/nautilus-file-utilities.c:377
-msgid "CD Creator"
-msgstr "Tvůrce CD"
+msgid "CD/DVD Creator"
+msgstr "Tvůrce CD/DVD"
 
 #: libnautilus-private/nautilus-file-utilities.c:379
 msgid "Windows Network"
@@ -5855,8 +5855,8 @@ msgstr "Jít do adresáře šablon"
 
 #: src/nautilus-navigation-window-ui.xml.h:16
 #: src/nautilus-spatial-window-ui.xml.h:9
-msgid "Go to the CD Creator"
-msgstr "Jít do tvůrce CD"
+msgid "Go to the CD/DVD Creator"
+msgstr "Jít do tvůrce CD/DVD"
 
 #: src/nautilus-navigation-window-ui.xml.h:17
 msgid "Go to the next visited location"
@@ -6379,8 +6379,8 @@ msgid "_Backgrounds and Emblems..."
 msgstr "_Pozadí a emblémy..."
 
 #: src/nautilus-shell-ui.xml.h:30
-msgid "_CD Creator"
-msgstr "Tvůrce _CD"
+msgid "_CD/DVD Creator"
+msgstr "Tvůrce _CD/DVD"
 
 #: src/nautilus-shell-ui.xml.h:31
 msgid "_Close"
