--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-31  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanih translation.
+
 2004-07-30  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
