--- a/po/es.po
+++ b/po/es.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-07-24 12:44+0200\n"
-"PO-Revision-Date: 2004-07-24 12:47+0200\n"
+"POT-Creation-Date: 2004-07-31 11:36+0200\n"
+"PO-Revision-Date: 2004-07-31 11:38+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1318,7 +1318,8 @@ msgstr "Nombre del icono de la papelera del escritorio"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:28
 msgid "Enable 'special' flags in file preferences dialog"
-msgstr "Activar los atributos «especiales» en el diálogo de preferencias de archivo"
+msgstr ""
+"Activar los atributos «especiales» en el diálogo de preferencias de archivo"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid "Enables the classic Nautilus behavior, where all windows are browsers"
@@ -1373,7 +1374,8 @@ msgstr ""
 "archivos."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
-msgid "If set to true, newly opened windows will have the location bar visible."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 "Si está definido como «true», las ventanas nuevas abiertas tendrán la barra "
 "de dirección visible."
@@ -1562,7 +1564,8 @@ msgstr ""
 "juntos en las ventanas nuevas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
-msgid "If true, labels will be placed beside icons rather than underneath them."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
 "Si es «true» las etiquetas serán colocadas a los lados de los iconos en "
 "lugar de por debajo de éstos."
@@ -1738,21 +1741,26 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:85
 msgid "The default width of the side pane in new windows."
-msgstr "La anchura predeterminada para el panel lateral en las ventanas nuevas."
+msgstr ""
+"La anchura predeterminada para el panel lateral en las ventanas nuevas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:86
 msgid "The font description used for the icons on the desktop."
-msgstr "La descripción de la tipografía usada para los iconos en el escritorio."
+msgstr ""
+"La descripción de la tipografía usada para los iconos en el escritorio."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr "El formato de las fechas de los archivos. Los valores posibles son «local», «iso» e «informal»."
+msgstr ""
+"El formato de las fechas de los archivos. Los valores posibles son «local», "
+"«iso» e «informal»."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "The side pane view to show in newly opened windows."
-msgstr "La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
+msgstr ""
+"La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -1833,11 +1841,13 @@ msgstr "Define si se ha establecido un fondo predeterminado de carpeta."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:102
 msgid "Whether a custom default side pane background has been set."
-msgstr "Indica si se ha establecido un fondo predeterminado en el panel lateral."
+msgstr ""
+"Indica si se ha establecido un fondo predeterminado en el panel lateral."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:103
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr "Indica si se debe solicitar una confirmación al mover archivos a la papelera"
+msgstr ""
+"Indica si se debe solicitar una confirmación al mover archivos a la papelera"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:104
 msgid "Whether to enable immediate deletion"
@@ -2050,7 +2060,8 @@ msgstr "El emblema no puede ser instalado."
 
 #: libnautilus-private/nautilus-emblem-utils.c:198
 msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
-msgstr "Lo siento, pero debe especificar una descripción para el emblema nuevo."
+msgstr ""
+"Lo siento, pero debe especificar una descripción para el emblema nuevo."
 
 # components/services/trilobite/libtrilobite/trilobite-core-utils.c:197
 #: libnautilus-private/nautilus-emblem-utils.c:199
@@ -2061,7 +2072,8 @@ msgid "Couldn't Install Emblem"
 msgstr "No se ha podido instalar el emblema"
 
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Lo siento, pero la descripción del emblema sólo puede contener letras, "
 "espacios y números."
@@ -3101,8 +3113,8 @@ msgid "Themes"
 msgstr "Temas"
 
 #: libnautilus-private/nautilus-file-utilities.c:377
-msgid "CD Creator"
-msgstr "Grabador de CDs"
+msgid "CD/DVD Creator"
+msgstr "Grabador de CD/DVD"
 
 # libnautilus-private/nautilus-undo-signal-handlers.c:177
 #: libnautilus-private/nautilus-file-utilities.c:379
@@ -3463,7 +3475,8 @@ msgstr ""
 msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it?"
-msgstr "¿Quiere cambiar a organización manual y dejar este elemento donde lo soltó?"
+msgstr ""
+"¿Quiere cambiar a organización manual y dejar este elemento donde lo soltó?"
 
 # libnautilus-private/nautilus-icon-dnd.c:703
 #: libnautilus-private/nautilus-icon-dnd.c:745
@@ -3874,7 +3887,8 @@ msgstr ""
 # src/nautilus-window-manage-views.c:1287
 #: libnautilus-private/nautilus-program-choosing.c:614
 #: src/nautilus-window-manage-views.c:1411
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr ""
 "Compruebe que lo que escribió es correcto y que su configuración del proxy "
 "es correcta."
@@ -3939,7 +3953,8 @@ msgid "This drop target only supports local files."
 msgstr "El destino sólo soporta archivos locales."
 
 #: libnautilus-private/nautilus-program-choosing.c:919
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Para abrir archivos no locales cópielos a una carpeta local y luego "
 "suéltelos nuevamente."
@@ -4078,7 +4093,8 @@ msgstr "¿Está seguro que desea eliminar permanentemente «%s»?"
 #: src/file-manager/fm-directory-view.c:851
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] ""
 "¿Está seguro de que desea eliminar permanentemente el %d elemento "
 "seleccionado?"
@@ -4183,7 +4199,8 @@ msgstr "%s%s, %s"
 #: src/file-manager/fm-directory-view.c:1964
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr "La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
+msgstr ""
+"La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
 
 #: src/file-manager/fm-directory-view.c:1970
 msgid "Some files will not be displayed."
@@ -4195,7 +4212,8 @@ msgstr "Demasiados archivos"
 
 #: src/file-manager/fm-directory-view.c:3249
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr "No puede mover el archivo a la papelera. ¿Quiere eliminarlo inmediatamente?"
+msgstr ""
+"No puede mover el archivo a la papelera. ¿Quiere eliminarlo inmediatamente?"
 
 #: src/file-manager/fm-directory-view.c:3250
 #, c-format
@@ -4209,7 +4227,8 @@ msgstr ""
 "inmediatamente?"
 
 #: src/file-manager/fm-directory-view.c:3257
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
 "No puede mover algunos de los elementos a la papelera, ¿quiere borrarlos "
 "directamente?"
@@ -4412,8 +4431,10 @@ msgstr "«%s» será copiado si selecciona la orden «Pegar archivos»"
 
 #: src/file-manager/fm-directory-view.c:5070
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
 msgstr[0] ""
 "El %d elemento seleccionado será movido si selecciona la orden «Pegar "
 "Archivos»"
@@ -4423,8 +4444,10 @@ msgstr[1] ""
 
 #: src/file-manager/fm-directory-view.c:5077
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
 msgstr[0] ""
 "El %d elemento seleccionado será copiado si selecciona la orden «Pegar "
 "Archivos»"
@@ -4637,13 +4660,15 @@ msgstr "Lanzador"
 # src/nautilus-window-manage-views.c:648
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "No tiene los permisos suficientes para ver el contenido de «%s»."
 
 #: src/file-manager/fm-error-reporting.c:61
 #, c-format
 msgid "\"%s\" couldn't be found. Perhaps it has recently been deleted."
-msgstr "«%s» no ha podido ser encontrado. Quizás haya sido eliminado recientemente."
+msgstr ""
+"«%s» no ha podido ser encontrado. Quizás haya sido eliminado recientemente."
 
 # src/file-manager/fm-error-reporting.c:115
 #: src/file-manager/fm-error-reporting.c:68
@@ -4663,14 +4688,16 @@ msgstr "Error al mostrar la carpeta"
 # src/file-manager/fm-error-reporting.c:50
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
 msgstr ""
 "El nombre «%s» ya está siendo usado en esta carpeta. Por favor seleccione un "
 "nombre distinto."
 
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr ""
 "No existe un «%s» en esta carpeta. Quizás fue movido o eliminado "
 "recientemente."
@@ -4723,7 +4750,8 @@ msgstr "Error al renombrar"
 # src/file-manager/fm-error-reporting.c:85
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "No tiene los permisos suficientes para cambiar el grupo de «%s»."
 
 #: src/file-manager/fm-error-reporting.c:169
@@ -4773,7 +4801,8 @@ msgstr "Error al establecer el propietario"
 # src/file-manager/fm-error-reporting.c:137
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 "No se ha podido cambiar los permisos de «%s» porque está en un disco de sólo "
 "lectura"
@@ -4883,7 +4912,8 @@ msgstr "Arrastrar y soltar no está soportado."
 
 #: src/file-manager/fm-icon-view.c:2616
 msgid "Drag and drop is only supported on local file systems."
-msgstr "Arrastrar y soltar sólo está soportado para sistemas de archivos locales."
+msgstr ""
+"Arrastrar y soltar sólo está soportado para sistemas de archivos locales."
 
 #: src/file-manager/fm-icon-view.c:2617 src/file-manager/fm-icon-view.c:2641
 msgid "Drag and Drop Error"
@@ -4910,7 +4940,8 @@ msgstr "¡No puede asignar más de un icono personalizado a la vez!"
 #: src/file-manager/fm-properties-window.c:483
 #: src/nautilus-information-panel.c:507
 msgid "Please drag just one image to set a custom icon."
-msgstr "Por favor arrastre sólo una imagen para usarla como icono personalizado."
+msgstr ""
+"Por favor arrastre sólo una imagen para usarla como icono personalizado."
 
 #: src/file-manager/fm-properties-window.c:484
 #: src/nautilus-information-panel.c:508
@@ -5319,7 +5350,8 @@ msgid "Open a new GNOME terminal window"
 msgstr "Abre una ventana nueva de la terminal de Gnome"
 
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:8
-msgid "Show a window that lets you set your desktop background's pattern or color"
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
 "Muestra una ventana que le deja configurar el patrón del fondo o el color de "
 "su escritorio"
@@ -5340,7 +5372,8 @@ msgstr "Usar el fondo de escritorio predeterminado"
 # libnautilus-private/nautilus-program-chooser.c:1248
 #: src/file-manager/nautilus-directory-view-ui.xml.h:1
 msgid "Choose a program with which to open the selected item"
-msgstr "Selecciona un programa con el cual poder abrir el elemento seleccionado"
+msgstr ""
+"Selecciona un programa con el cual poder abrir el elemento seleccionado"
 
 # libnautilus-private/nautilus-program-chooser.c:1248
 #: src/file-manager/nautilus-directory-view-ui.xml.h:2
@@ -5418,7 +5451,8 @@ msgid "Mount the selected volume"
 msgstr "Montar el volumen seleccionado"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:25
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
 "Mueve o copia archivos previamente seleccionados por una orden «Cortar» o "
 "«Copiar» archivos»"
@@ -5512,7 +5546,8 @@ msgstr "Selecciona todos los elementos que hay en esta ventana"
 # libnautilus-private/nautilus-global-preferences.c:622
 #: src/file-manager/nautilus-directory-view-ui.xml.h:43
 msgid "Select items in this window matching a given pattern"
-msgstr "Selecciona los elementos en esta ventana que coincidan con un patrón dado"
+msgstr ""
+"Selecciona los elementos en esta ventana que coincidan con un patrón dado"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:44
 msgid "Show _Hidden Files"
@@ -5528,7 +5563,8 @@ msgstr "Muestra la carpeta que contiene los guiones que aparecen en este menú"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:47
 msgid "Toggles the display of hidden files in the current window"
-msgstr "Indica si deben mostrarse o no los archivos ocultos en la ventana actual"
+msgstr ""
+"Indica si deben mostrarse o no los archivos ocultos en la ventana actual"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:48
 msgid "Unmount the selected volume"
@@ -5540,7 +5576,8 @@ msgstr "Usa el fondo predeterminado para esta dirección"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:51
 msgid "View or modify the properties of each selected item"
-msgstr "Muestra o permite modificar las propiedades de cada elemento seleccionado"
+msgstr ""
+"Muestra o permite modificar las propiedades de cada elemento seleccionado"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:54
 msgid "_Empty File"
@@ -5957,7 +5994,8 @@ msgstr "<span weight=\"bold\">Descripciones de los iconos</span>"
 
 #: src/nautilus-file-management-properties.glade.h:30
 msgid "<span weight=\"bold\">Icon View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
 
 #: src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">List Columns</span>"
@@ -5965,7 +6003,8 @@ msgstr "<span weight=\"bold\">Lista de columnas</span>"
 
 #: src/nautilus-file-management-properties.glade.h:32
 msgid "<span weight=\"bold\">List View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
 
 #: src/nautilus-file-management-properties.glade.h:33
 msgid "<span weight=\"bold\">Other Previewable Files</span>"
@@ -5985,7 +6024,8 @@ msgstr "<span weight=\"bold\">Papelera</span>"
 
 #: src/nautilus-file-management-properties.glade.h:37
 msgid "<span weight=\"bold\">Tree View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
 
 # libnautilus-private/nautilus-global-preferences.c:582
 #: src/nautilus-file-management-properties.glade.h:38
@@ -6018,7 +6058,8 @@ msgstr ""
 # src/file-manager/fm-icon-text-window.c:267
 #: src/nautilus-file-management-properties.glade.h:48
 msgid "Choose the order of information to appear in the list view."
-msgstr "Seleccione el orden en que la información aparecerá en la vista de lista."
+msgstr ""
+"Seleccione el orden en que la información aparecerá en la vista de lista."
 
 # src/file-manager/dfos-xfer.c:763
 #: src/nautilus-file-management-properties.glade.h:49
@@ -6472,7 +6513,8 @@ msgstr "Cambia la visibilidad de la barra de estado de esta ventana"
 
 #: src/nautilus-navigation-window-ui.xml.h:7
 msgid "Clear contents of Go menu and Back/Forward lists"
-msgstr "Limpia los contenidos de los menús «Ir a» y listas de «Atrás» y «Adelante»"
+msgstr ""
+"Limpia los contenidos de los menús «Ir a» y listas de «Atrás» y «Adelante»"
 
 #: src/nautilus-navigation-window-ui.xml.h:8
 msgid "Close _All Windows"
@@ -6489,7 +6531,8 @@ msgstr "Conectar con el _servidor..."
 
 #: src/nautilus-navigation-window-ui.xml.h:12
 msgid "Display a window that allows editing the bookmarks in this menu"
-msgstr "Muestra una ventana que permite editar los marcadores que hay en este menú"
+msgstr ""
+"Muestra una ventana que permite editar los marcadores que hay en este menú"
 
 # #-#-#-#-#  nautilus-es.po (Nautilus)  #-#-#-#-#
 # src/nautilus-first-time-druid.c:290
@@ -6510,8 +6553,8 @@ msgstr "Ir a la carpeta de plantillas"
 # libnautilus-private/nautilus-file.c:2586
 #: src/nautilus-navigation-window-ui.xml.h:16
 #: src/nautilus-spatial-window-ui.xml.h:9
-msgid "Go to the CD Creator"
-msgstr "Ir al grabador de CDs"
+msgid "Go to the CD/DVD Creator"
+msgstr "Ir al creador de CD/DVD"
 
 # src/nautilus-window-menus.c:670
 #: src/nautilus-navigation-window-ui.xml.h:17
@@ -7128,8 +7171,8 @@ msgid "_Backgrounds and Emblems..."
 msgstr "_Fondos y emblemas..."
 
 #: src/nautilus-shell-ui.xml.h:30
-msgid "_CD Creator"
-msgstr "Grabador de _CDs"
+msgid "_CD/DVD Creator"
+msgstr "Grabador de _CD/DVD"
 
 #: src/nautilus-shell-ui.xml.h:31
 msgid "_Close"
@@ -8122,4 +8165,3 @@ msgstr "Ver sus servidores de red en el administrador de archivos Nautilus"
 # src/nautilus-first-time-druid.c:290
 #~ msgid "Find:"
 #~ msgstr "Buscar:"
-
