--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-31  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Corrected British English translation
+
 2004-07-31  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British translation.
