Updated Korean translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2004-07-31  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Corrected British English translation
