--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  David Lodge <dave@cirt.net>
+                                                                                
+        * en_GB.po: Corrected British translation.
+                                                                                
 2004-08-01  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
