--- a/po/da.po
+++ b/po/da.po
@@ -32,7 +32,7 @@ msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-04 14:20+0200\n"
-"PO-Revision-Date: 2004-08-04 14:15+0200\n"
+"PO-Revision-Date: 2004-08-04 22:03+0200\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -4097,7 +4097,7 @@ msgstr "Felj ved afmontering"
 #: src/file-manager/fm-directory-view.c:5451
 #, c-format
 msgid "Connect to Server %s"
-msgstr "Tilkobl til server %s"
+msgstr "Tilkobl til serveren %s"
 
 #: src/file-manager/fm-directory-view.c:5456
 msgid "_Connect"
