Updated Swedish translation.
2004-08-04  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/sv.po
+++ b/po/sv.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-07-25 18:46+0200\n"
-"PO-Revision-Date: 2004-07-25 18:47+0200\n"
+"POT-Creation-Date: 2004-08-04 22:43+0200\n"
+"PO-Revision-Date: 2004-08-04 22:43+0200\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2836,8 +2836,8 @@ msgid "Themes"
 msgstr "Teman"
 
 #: libnautilus-private/nautilus-file-utilities.c:377
-msgid "CD Creator"
-msgstr "Cd-skapare"
+msgid "CD/DVD Creator"
+msgstr "Cd/dvd-skapare"
 
 #: libnautilus-private/nautilus-file-utilities.c:379
 msgid "Windows Network"
@@ -5878,8 +5878,8 @@ msgstr "Gå till mallmappen"
 
 #: src/nautilus-navigation-window-ui.xml.h:16
 #: src/nautilus-spatial-window-ui.xml.h:9
-msgid "Go to the CD Creator"
-msgstr "Gå till cd-skaparen"
+msgid "Go to the CD/DVD Creator"
+msgstr "Gå till cd/dvd-skaparen"
 
 #: src/nautilus-navigation-window-ui.xml.h:17
 msgid "Go to the next visited location"
@@ -6413,8 +6413,8 @@ msgid "_Backgrounds and Emblems..."
 msgstr "Bakgrunder och _emblem..."
 
 #: src/nautilus-shell-ui.xml.h:30
-msgid "_CD Creator"
-msgstr "_Cd-skapare"
+msgid "_CD/DVD Creator"
+msgstr "_Cd/dvd-skapare"
 
 #: src/nautilus-shell-ui.xml.h:31
 msgid "_Close"
