--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-08-04  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
