--- a/po/mk.po
+++ b/po/mk.po
@@ -38,7 +38,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Form: plural=1; nplurals=3\n"
+"Plural-Form: plural=n%10==1 && n%100!=11 ? 0 : 1; nplurals=3\n"
 
 #: components/adapter/main.c:101
 msgid "bonobo_ui_init() failed."
@@ -3707,7 +3707,7 @@ msgstr "_Шара:"
 #: src/file-manager/fm-directory-view.c:1742
 #, c-format
 msgid "\"%s\" selected"
-msgstr "\"%s\" избрани"
+msgstr "\"%s\" е означен"
 
 #: src/file-manager/fm-directory-view.c:1744
 #, c-format
