Updated Danish translation
        * da.po: Updated Danish translation

--- a/po/da.po
+++ b/po/da.po
@@ -31,9 +31,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-04 14:20+0200\n"
-"PO-Revision-Date: 2004-08-04 22:03+0200\n"
-"Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
+"POT-Creation-Date: 2004-08-09 10:50+0200\n"
+"PO-Revision-Date: 2004-08-09 10:54+0200\n"
+"Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4097,11 +4097,11 @@ msgstr "Felj ved afmontering"
 #: src/file-manager/fm-directory-view.c:5451
 #, c-format
 msgid "Connect to Server %s"
-msgstr "Tilkobl til serveren %s"
+msgstr "Tilslut til serveren %s"
 
 #: src/file-manager/fm-directory-view.c:5456
 msgid "_Connect"
-msgstr "_Tilkobl"
+msgstr "_Tilslut"
 
 #: src/file-manager/fm-directory-view.c:5470
 #: src/nautilus-connect-server-dialog.c:191
@@ -4859,7 +4859,7 @@ msgstr "Vælg et andet program som du vil bruge til at åbne det valgte objekt"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:3
 msgid "Connect To This Server"
-msgstr "Tilkobl til denne server"
+msgstr "Tilslut til denne server"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:5
 msgid "Create _Document"
@@ -5354,11 +5354,11 @@ msgstr "Indtast et navn og prøv igen."
 #: src/nautilus-connect-server-dialog.c:88
 #: src/nautilus-connect-server-dialog.c:104
 msgid "Can't Connect to Server"
-msgstr "Kan ikke tilkoble til server"
+msgstr "Kan ikke tilslutte til server"
 
 #: src/nautilus-connect-server-dialog.c:177
 msgid "Connect to Server"
-msgstr "Tilkobl til server"
+msgstr "Tilslut til server"
 
 #: src/nautilus-connect-server-dialog.c:210
 msgid "_Location (URL):"
@@ -5370,7 +5370,7 @@ msgstr "Eksempel:"
 
 #: src/nautilus-connect-server-dialog.c:248
 msgid "C_onnect"
-msgstr "_Tilkobl"
+msgstr "_Tilslut"
 
 #: src/nautilus-desktop-window.c:356
 msgid "Desktop"
@@ -5900,7 +5900,7 @@ msgstr "Luk alle navigationsvinduer"
 #: src/nautilus-navigation-window-ui.xml.h:11
 #: src/nautilus-spatial-window-ui.xml.h:6
 msgid "Connect to _Server..."
-msgstr "Tilkobl til _server..."
+msgstr "Tilslut til _server..."
 
 #: src/nautilus-navigation-window-ui.xml.h:12
 msgid "Display a window that allows editing the bookmarks in this menu"
@@ -7464,7 +7464,7 @@ msgstr "Vis dine netværksservere i Nautilus-filhåndteringen"
 #~ "Please make sure that the address is correct and alternatively, type in "
 #~ "this address in the file manager directly"
 #~ msgstr ""
-#~ "Kunne ikke tilkoble til URI'en %s\n"
+#~ "Kunne ikke tilslutte til URI'en %s\n"
 #~ "Kontroller at adressen er korrekt og prøv evt. at skrive adressen direkte "
 #~ "in i filhåndteringen"
 
@@ -7476,7 +7476,7 @@ msgstr "Vis dine netværksservere i Nautilus-filhåndteringen"
 #~ "Kontrollér installationen af Nautilus"
 
 #~ msgid "Add a new server to your Network Servers and connect to it"
-#~ msgstr "Tilføj en ny server til dine netværksservere og tilkobl til den"
+#~ msgstr "Tilføj en ny server til dine netværksservere og tilslut til den"
 
 #~ msgid "New Server"
 #~ msgstr "Ny server"
