Update to latest libegg code.
2004-08-11  Alexander Larsson  <alexl@redhat.com>

	* cut-n-paste-code/libegg/egg-recent-item.c: (egg_recent_item_new),
	(make_valid_utf8), (egg_recent_item_get_short_name),
	(egg_recent_item_set_private), (egg_recent_item_get_private):
	* cut-n-paste-code/libegg/egg-recent-item.h:
	* cut-n-paste-code/libegg/egg-recent-model.c:
	(egg_recent_model_open_file), (egg_recent_model_lock_file),
	(egg_recent_model_unlock_file):
	Update to latest libegg code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-11  Alexander Larsson  <alexl@redhat.com>
+
+	* cut-n-paste-code/libegg/egg-recent-item.c: (egg_recent_item_new),
+	(make_valid_utf8), (egg_recent_item_get_short_name),
+	(egg_recent_item_set_private), (egg_recent_item_get_private):
+	* cut-n-paste-code/libegg/egg-recent-item.h:
+	* cut-n-paste-code/libegg/egg-recent-model.c:
+	(egg_recent_model_open_file), (egg_recent_model_lock_file),
+	(egg_recent_model_unlock_file):
+	Update to latest libegg code.
+	
 2004-07-29  Bastien Nocera  <hadess@hadess.net>
 
 	* libnautilus-private/nautilus-file-utilities.c:
