--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-10  Hasbullah Bin Pit  <sebol@my-penguin.org>
+                                                                                                                                               
+                * ms.po: Updated Malay translation.
+                                                                                                                                               
 2004-08-09  Sanlig Badral  <badral@openmn.org>
 
 	* mn.po: Updated Mongolian translation.
