added Tamil Traslation File

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -7652,4 +7652,7 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 2000-04-14  Ramiro Estrugo  <ramiro@eazel.com>
 
 	* ChangeLog: Added this thing to make 'make dist' happy.
+2004-08-12 Jayaradna <njaya@redhat.com>
+	* ta.po: Added tamil translation
+
 	
