Close dialog if parent is destroyed. Patch from Victor I.
2004-08-12  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-location-dialog.c (nautilus_location_dialog_new):
	Close dialog if parent is destroyed.
	Patch from Victor I. <lamer0@lamer0.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-location-dialog.c (nautilus_location_dialog_new):
+	Close dialog if parent is destroyed.
+	Patch from Victor I. <lamer0@lamer0.com>
+	
 2004-08-11  Alexander Larsson  <alexl@redhat.com>
 
 	* cut-n-paste-code/libegg/egg-recent-item.c: (egg_recent_item_new),
