add utf8 emacs variables to ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -23195,3 +23195,7 @@ Here are changes that Miguel made, but did not mention in his notes:
 2001-04-20  Ramiro Estrugo  <ramiro@eazel.com>
 
 	* ChangeLog: rolled over to ChangeLog-20010420.
+
+# Local Variables:
+# coding: utf-8
+# End:
