--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-12  Thomas Cataldo  <thomas.cataldo@aliacom.fr>
+
+	Some memory leak fixes	
+	
+	* libnautilus-private/nautilus-icon-factory.c:
+	(nautilus_icon_factory_instance_init), (create_normal_cache_icon):
+	* libnautilus-private/nautilus-module.c: (load_module_dir):
+
 2004-08-12  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations-progress.c:
