Revert my last commit, as discussed on nautilus-list.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-12  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(reset_bonobo_open_with_menu):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Revert my last commit, as discussed on nautilus-list.
+
 2004-08-12  Thomas Cataldo  <thomas.cataldo@aliacom.fr>
 
 	Some memory leak fixes	
