Updated Korean translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-13  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2004-08-13  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
@@ -15,9 +19,9 @@
 	* ta.po: Added tamil translation
 
 2004-08-10  Hasbullah Bin Pit  <sebol@my-penguin.org>
-                                                                                                                                               
-                * ms.po: Updated Malay translation.
-                                                                                                                                               
+
+	* ms.po: Updated Malay translation.
+
 2004-08-09  Sanlig Badral  <badral@openmn.org>
 
 	* mn.po: Updated Mongolian translation.
