yet to complete

--- a/po/ta.po
+++ b/po/ta.po
@@ -1641,7 +1641,7 @@ msgstr "பயன்படுத்தப்பட்ட தேதி"
 
 #: libnautilus-private/nautilus-column-utilities.c:74
 msgid "The date the file was accessed."
-msgstr "கோப்பு பயன்படுத்தப்பட்ட தேதி""
+msgstr "கோப்பு பயன்படுத்தப்பட்ட தேதி"
 
 #: libnautilus-private/nautilus-column-utilities.c:81
 msgid "Owner"
