--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-14  Gediminas Paulauskas <menesis@chatsubo.lt>
+
+	* lt.po: Updated Lithuanian translation.
+	
 2004-08-13  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
