Updated Polish translation by GNOME PL Team.
2004-08-14  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-14  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-08-14  Gediminas Paulauskas <menesis@chatsubo.lt>
 
 	* lt.po: Updated Lithuanian translation.
