--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-13 09:42+0200\n"
+"POT-Creation-Date: 2004-08-14 21:25+0200\n"
 "PO-Revision-Date: 2003-11-18 11:27+0100\n"
 "Last-Translator: Gnome PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -3933,7 +3933,7 @@ msgstr ""
 "pliku wskazuje, że jest to plik typu \"%s\". Otwarcie pliku, może spowodować "
 "zagrożenie dla bezpieczeństwa systemu.\n"
 "\n"
-"Nie otwieraj pliku jeżeli nie jest stworozny przez Ciebie, lub nie pochodzi "
+"Nie otwieraj pliku jeżeli nie jest stworzony przez Ciebie, lub nie pochodzi "
 "on z zaufanego źródła. Aby otworzyć ten plik, zmień jego rozszerzenie na "
 "prawidłowe dla \"%s\", a następnie otwórz go normalnie. Alternatywnie możesz "
 "wybrać z menu \"Otwórz za pomocą\" aby wybrać odpowiednią aplikację dla "
