Make the connect to server dialog a bit nicer.
2004-08-16  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-connect-server-dialog.c:
	(nautilus_connect_server_dialog_finalize), (connect_to_server),
	(response_callback), (setup_for_type), (combo_changed_callback),
	(port_insert_text), (nautilus_connect_server_dialog_init),
	(nautilus_connect_server_dialog_new):
	Make the connect to server dialog a bit nicer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-16  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-connect-server-dialog.c:
+	(nautilus_connect_server_dialog_finalize), (connect_to_server),
+	(response_callback), (setup_for_type), (combo_changed_callback),
+	(port_insert_text), (nautilus_connect_server_dialog_init),
+	(nautilus_connect_server_dialog_new):
+	Make the connect to server dialog a bit nicer.
+
 2004-08-12  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
